Upgrade compiler baseline to Java 17 (#2021)